--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-				<h1>Jane Doe</h1>
-				<p>Senior Psychonautics Engineer</p>
+				<span class="avatar"><img src="images/pretty.jpg" alt=""/></span>
+				<h1>Kalli Blasko</h1>
+				<p>Computer Science Student</p>
 			</header>
 
 			<hr />
 			<h2>Let's get in Touch!</h2>
-			<button onclick="showContactForm()">Contact</button>
-			<form id="contact-form" method="post" action="https://formspree.io/EMAIL_HERE">
+			<button class="contact_button" onclick="showContactForm()">Contact</button>
+			<form id="contact-form" method="post" action="https://formspree.io/kallandria.blasko@mail.mcgill.ca">
 				<div class="fields">
 					<div class="field">
 						<input type="text" name="name" id="name" placeholder="Name" />
@@ -53,7 +53,7 @@
 							<option value="">Department</option>
 							<option value="sales">Sales</option>
 							<option value="tech">Tech Support</option>
-							<option value="null">/dev/null</option>
+							<option value="recruiter">Recruiter</option>
 						</select>
 						</input>
 					</div>
@@ -77,10 +77,10 @@
 
 			<footer>
 				<ul class="icons">
-					<li><a href="#" class="fa-twitter">Twitter</a></li>
-					<li><a href="#" class="fa-instagram">Instagram</a></li>
-					<li><a href="#" class="fa-facebook">Facebook</a></li>
-					<li><a href="#" download class="far fa-file">CV</a></li>
+					<li><a href="https://www.twitter.com/" class="fa-twitter">Twitter</a></li>
+					<li><a href="https://www.instagram.com/" class="fa-instagram">Instagram</a></li>
+					<li><a href="https://www.facebook.com/" class="fa-facebook">Facebook</a></li>
+					<li><a href="files/resume_2018.pdf" target="_blank" download class="far fa-file">CV</a></li>
 				</ul>
 			</footer>
 		</section>
@@ -88,7 +88,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
-				<li>&copy; Jane Doe</li>
+				<li>&copy; Kalli Blasko</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
