--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<li><a href="https://www.twitter.com/" class="fa-twitter">Twitter</a></li>
 					<li><a href="https://www.instagram.com/" class="fa-instagram">Instagram</a></li>
 					<li><a href="https://www.facebook.com/" class="fa-facebook">Facebook</a></li>
-					<li><a href="files/resume_2018.pdf" target="_blank" download class="far fa-file">CV</a></li>
+					<li><a href="#" target="_blank" download class="far fa-file">CV</a></li>
 				</ul>
 			</footer>
 		</section>
