--- a/faq.html
+++ b/faq.html
@@ -31,18 +31,33 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/pretty.jpg" alt=""/></span>
-				<h1>Kalli Blasko</h1>
-				<p>Computer Science Student</p>
-				<ul class="buttons">
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-				</ul>
+				<h1>FAQs</h1>
 			</header>
 
+			<hr />
+
+			<button class="accordion">How much is shipping?</button>
+			<div class="panel">
+			  <p>8 million USD</p>
+			</div>
+
+			<button class="accordion">What is 3 factorial?</button>
+			<div class="panel">
+			  <p>6</p>
+			</div>
+
+			<button class="accordion">When did Canada become independent?</button>
+			<div class="panel">
+			  <p>1867</p>
+			</div>
+
 			<hr /> 
+
+			<h2>feel free to contact us with any other questions</h2>
+			<ul class="buttons">
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			<hr />
 
 
 			<footer>
@@ -72,7 +87,7 @@
 			document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 		}
 	</script>
-	<script src="scripts/index.js"></script>
+	<script src="scripts/faq.js"></script>
 
 </body>
 
