--- a/contact.html
+++ b/contact.html
@@ -31,19 +31,36 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/pretty.jpg" alt=""/></span>
-				<h1>Kalli Blasko</h1>
-				<p>Computer Science Student</p>
-				<ul class="buttons">
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-				</ul>
+				<h1>Let's get in Touch!</h1> 
 			</header>
 
-			<hr /> 
-
+			<hr />
+			<!--<button class="contact_button" onclick="showContactForm()">Contact</button>-->
+			<form id="contact-form" method="post" action="https://formspree.io/kallandria.blasko@mail.mcgill.ca">
+				<div class="fields">
+					<div class="field">
+						<input type="text" name="name" id="name" placeholder="Name" />
+					</div>
+					<div class="field">
+						<input type="email" name="email" id="email" placeholder="Email" />
+					</div>
+					<div class="field">
+						<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
+					</div>
+					<div class="field">
+						<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
+					</div>
+					<div class="field">
+						<label>But are you a robot?</label>
+						<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
+						<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
+					</div>
+				</div>
+				<ul class="actions special">
+					<li><button href="#" type="submit" class="button">Send</button></li>
+				</ul>
+			</form>
+			<hr />
 
 			<footer>
 				<ul class="icons">
