--- a/gallery.html
+++ b/gallery.html
@@ -31,19 +31,14 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/pretty.jpg" alt=""/></span>
-				<h1>Kalli Blasko</h1>
-				<p>Computer Science Student</p>
-				<ul class="buttons">
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="faq.html">FAQ</a></li>
-				</ul>
+				<h1>ABOUT</h1>
 			</header>
 
-			<hr /> 
-
+			<hr />
+			<iframe width="420" height="315"
+			src="https://www.youtube.com/watch?v=BfJk8wFOcDQ">
+			</iframe>
+			<hr />
 
 			<footer>
 				<ul class="icons">
